added some images

--- a/Assign_2/Assign_2/Assign_2.csproj
+++ b/Assign_2/Assign_2/Assign_2.csproj
@@ -68,6 +68,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Global.asax" />
+    <Content Include="images\house.jpg" />
+    <Content Include="images\money.png" />
     <Content Include="MortgageCalc.aspx" />
     <Content Include="Purchase.aspx" />
     <Content Include="Refinance.aspx" />
